--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "nodeXBlink",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "blink": "node blink.js"
-  },
-  "keywords": [],
-  "author": "Sharoz Tanveer",
-  "license": "ISC",
-  "dependencies": {
-    "johnny-five": "^1.3.1"
-  }
+    "name": "nodeXBlink",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "blink": "node blink.js",
+        "ledController": "node ledController.js"
+
+    },
+    "keywords": [],
+    "author": "Sharoz Tanveer",
+    "license": "ISC",
+    "dependencies": {
+        "ejs": "^2.7.1",
+        "express": "^4.17.1",
+        "express-ejs-layouts": "^2.5.0",
+        "johnny-five": "^1.3.1"
+    }
 }
